# TempoRAG

./: .dockerignore  .gitignore  Dockerfile  HF_Prediction.ipynb  README.md  TempoRAG_Research_Methodology_Diagram  backend_error.txt  backend_error_utf8.txt  check_import.py  check_imports.py  debug_log.txt  inspect_weights.py  main.py  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_key.py  test_pubmed.py  test_pubmed_context.py  wrapper_source.txt
Prediction/: Heart_Failure_Prediction_Comparison.ipynb  Heart_Failure_Prediction_Comparison_Different_Data.ipynb  Heart_Failure_Prediction_Enhanced_Colab (1).ipynb  Heart_Failure_Prediction_Enhanced_Colab_Different_Data.ipynb
backend/: app.py  auth.py
clinical-rag-assistant/: App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite-env.d.ts  vite.config.ts
clinical-rag-assistant/components/: EKGPulseLoader.tsx  EvalDashboard.tsx  Icons.tsx  LoginPage.tsx  MarkdownText.tsx  MedicalSearch.tsx  MessageBubble.tsx  PulsingHeartLoader.tsx  QuerySuggest.tsx  RiskPredictor.tsx  SourceCard.tsx  SplashScreen.tsx  (+2 more)
data/: pubmed_heart_failure_extended.csv  pubmed_metadata.csv
docs/: architecture.py  architecture_exact.py  architecture_exact_match  architecture_publication_ready  generate_high_res_diagram.py
evaluation/: ablation_study.py  benchmark_qa.json  generate_case_study.py  plot_ragas_metrics.py  ragas_eval.py  true_ragas_eval.py
src/: graph.py  ingestion.py  nodes.py  state.py  tools.py  tools_backup.py  utils.py
temporal-rag/: rag-pubmed.ipynb
(+30 files in other folders)
